# star-voting-library

./: .gitignore  AGENTS.md  CLAUDE.md  THIRD_PARTY_LICENSES.md  index.md  mkdocs.yml  pets.html  pyproject.toml  readme.md  todo-bv-migrate-ballot-style-lab.md
00_start_here/: 00_START_HERE.md  CURRICULUM.md  CURRICULUM_101.md  CURRICULUM_201.md  CURRICULUM_301.md  GLOSSARY.md  LINKS.md  ORGANIZATION.md  README.md  README_00_start_here.md  TIPS_canonical_elections.md  TIPS_choosing_voter_counts.md  TIPS_terminology.md  Why_STAR_Voting.md  YAML_authoring_template.md  advocacy_organizations.md  ballot_styles.md  (+31 more)
STARVote_LH_tabulation_engine/: BUG_sss_verbosity.md  FORK_NOTES.md  LH_ENGINE_CHANGES.md  README.md  README_larry_hastings.md  pyproject.toml  starvote_larry_hastings.py
STARVote_LH_tabulation_engine/STARVote_LH_tabulation_engine_tabulated/: options_examples_RCV-IRV_tabulated.txt  options_examples_tabulated.txt
STARVote_LH_tabulation_engine/docs/: clarifying_star_voting.md
STARVote_LH_tabulation_engine/test_elections/: README.md
STARVote_LH_tabulation_engine/tests/: README.md  test_abcvoting_crosscheck.py  test_abif_conversion.py  test_content_quality.py  test_lot_number_tiebreak.py  test_md_links.py  test_method_positive.py  test_multirace_split.py  test_negative_validation.py  test_pref_voting_crosscheck.py  test_range_tabulation.py  test_ranked_robin.py  test_readme_index_complete.py  test_single_winner_positive.py  test_yaml_index_current.py  test_yaml_pages_current.py
STARVote_LH_tabulation_engine/tests/harness_cases/: wrong_winner_set_multiwinner.yaml
STARVote_LH_tabulation_engine/tools_adam/: bv_ballot_sheet.py  bv_ballot_sheet_FSD.md  bv_election_specs.py  convert_abif.py  create_bv_test_election.md  create_bv_test_election.py  fetch_bv_export.py  find_four_way_divergence.py  generate_dead_rung_scenarios.md  generate_dead_rung_scenarios.py  generate_flat_tie_scenarios.md  generate_flat_tie_scenarios.py  md_to_presenter_html.py  two_way_import.py
STARVote_LH_tabulation_engine/tools_adam/assets/: README.md
STARVote_LH_tabulation_engine/tools_adam/bv_ballot_sheet_rs/: Cargo.toml  README.md
STARVote_LH_tabulation_engine/tools_adam/bv_ballot_sheet_rs/src/: main.rs  typst_render.rs
STARVote_LH_tabulation_engine/tools_adam/pref_voting_tabulation_engine/: README.md  cycle_resolution_report.py  example_tennessee.yaml  pref_voting_tabulation.py  ranked_robin_report.py
STARVote_LH_tabulation_engine/tools_adam/scripts/: build_bv_registry.py  build_catalog.py  build_divergence_index.py  build_multirace_index.py  build_paradox_index.py  build_yaml_index.py  build_yaml_pages.py  check_external_links.py  check_repo_hygiene.py
STARVote_LH_tabulation_engine/tools_adam/scripts/git-hooks/: pre-commit
(+3040 files in other folders)
