[project]
name = "yaml"
version = "0.1.0"
description = "STAR Voting education & test-case library: a vendored STAR / RCV-IRV tabulation engine, example elections, a BetterVoting JSON->YAML converter, and a pytest suite."
readme = "readme.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "faker>=40.19.1",
    "mypy>=2.0.0",
    "playwright>=1.60.0",
    "pref-voting>=1.14.0",
    "pyyaml>=6.0.3",
    "segno>=1.6.0",
    "starvote",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.mypy]
strict = true

[tool.uv.workspace]
members = [
    "STARVote_LH_tabulation_engine",
]

[tool.uv.sources]
starvote = { workspace = true, editable = true }
