[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "starvote"
authors = [
    {name = "Larry Hastings", email = "larry@hastings.org"},
    ]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    ]
dynamic = [
    'version',
    'description',
    ]
dependencies = [
    "pyyaml>=6.0.1",
    "faker",
]

[project.urls]
Source = "https://github.com/larryhastings/starvote/"


[project.optional-dependencies]
reference = [
    "numpy",
    "pandas",
    ]
# Optional: independent cross-check of the ranked-ballot methods (Condorcet /
# IRV / Plurality) against Eric Pacuit's pref_voting library. Powers
# tests/test_pref_voting_crosscheck.py and tools_adam/pref_voting_crosscheck.py.
# Install with:  pip install -e .[crosscheck]   (or  pip install pref_voting)
crosscheck = [
    "pref_voting>=1.18",
    ]
