[package]
name = "bv-ballot-sheet"
version = "0.1.0"
edition = "2021"
description = "Print STAR paper ballots (PDF) from a BetterVoting export — Rust/Typst port of bv_ballot_sheet.py"

[[bin]]
name = "bv_ballot_sheet"
path = "src/main.rs"

[dependencies]
serde_json = "1"
clap = { version = "4", features = ["derive"] }
qrcode = "0.14"
typst-as-lib = "0.16.0"
typst-assets = { version = "0.15.0", features = ["fonts"] }
typst-pdf = "0.15"

[profile.release]
opt-level = 2
